# Final-practice

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  aux.txt
datos/: paises.txt
rutas_aereas/doc/: mainpage.dox  pruebas.dox
rutas_aereas/include/: Almacen_Rutas.h  Pais.h  Paises.h  Punto.h  Ruta.h  imagen.h
rutas_aereas/src/: Almacen_Rutas.cpp  Pais.cpp  Paises.cpp  Punto.cpp  Ruta.cpp  imagen.cpp  prueba_almacen_rutas.cpp  prueba_pais.cpp  prueba_paises.cpp  prueba_punto.cpp  prueba_ruta.cpp  pruebamia.cpp  pruebapegado.cpp  pruebapintar.cpp  pruebarotacion.cpp  ruta_aerea.cpp
